fix(autocomplete-members): truncate search results user details (#1499)

--- a/src/components/messenger/autocomplete-members/styles.scss
+++ b/src/components/messenger/autocomplete-members/styles.scss
@@ -54,6 +54,8 @@
     flex-direction: column;
     align-items: flex-start;
     flex: 1 0 0;
+    width: 100%;
+    overflow: hidden;
   }
 
   &__label {
@@ -64,6 +66,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    width: 100%;
   }
 
   &__sub-label {
@@ -71,6 +74,10 @@
 
     font-size: 10px;
     line-height: 14px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
   }
 }
 
